# os

./: .gitignore  Cargo.toml  Justfile  Makefile.toml  build.rs  build_bootloader.sh  debug.gdb  install.md  ipc_idea.md  ipc_message_passing.md  linker.ld  note.md  rust-toolchain  x86_64-kernel-nopic.json
.cargo/: config.toml
src/: acpi.rs  cpu.rs  elf.rs  env.rs  error.rs  heap.rs  info.rs  interrupt.rs  log.rs  main.rs  pmm.rs  proc.rs  qemu.rs  stack.rs  syscall.rs  test.rs  time.rs  traits.rs  util.rs  vmm.rs
src/arch/: mod.rs
src/arch/x86_64/: context.rs  cpu.rs  gdt.rs  idt.rs  interrupt.rs  lapic_timer.rs  mod.rs  paging.rs  pic.rs  pit.rs  smp.rs  syscall.rs  trampoline.asm
src/arch/x86_64/cpu/: lapic.rs  trampoline.rs
src/arch/x86_64/smp/: cpulist.rs  lapic.rs  thread_local.rs  trampoline.rs
src/arch/x86_64/timers/: rtc.rs
src/common/: bitvec.rs
src/dev/: mod.rs  screen.rs  serial.rs  stdout.rs  text_screen.rs
src/fs/: fifo.rs  file.rs  filesystem.rs  generic_file.rs  include.rs  mod.rs  path.rs  ramfs.rs  rootfs.rs
src/interrupt/: handlers.rs  number.rs  timer.rs
src/mm/: error.rs  frame_allocator.rs  mapping.rs  memory.rs  mod.rs  pmm.rs  region.rs  vmm.rs
src/proc/: ipc.rs
src/syscall/: handlers.rs  userptr.rs
syscall/: Cargo.toml  cbindgen.toml  crate_type.py  syscall.h
syscall/.cargo/: config.toml
syscall/src/: call.rs  error.rs  flags.rs  lib.rs  number.rs
userspace/c/: success.c  test_clone.c  test_exec.c  test_fb.c  test_fifo.c  test_fs.c  test_user.c
userspace/c/include/: syscall.h
