[package]
name = "rkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkloader = { path = "../kloader/libkloader" }
x86_64 = "0.14"
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
noto-sans-mono-bitmap = { version = "0.1.5", features = ["size_14"] }
either = { version = "1.6.1", default-features = false }
linked_list_allocator = "0.9.1"
