[package]
name = "rkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall = { path = "syscall" }
libkloader = { path = "../kloader/libkloader" }
x86_64 = { path = "../x86_64" }#"0.14"
spin = { version = "0.9.2", features = ["once"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
noto-sans-mono-bitmap = { version = "0.1.5", features = ["size_14"] }
either = { version = "1.6.1", default-features = false }
linked_list_allocator = "0.9.1"
paste = "1.0"
acpi = "4.1.0"
bitfield = "0.13.2"
volatile = "0.4.5"
itertools = { version = "0.10.2", default-features = false }
bitflags = "1.3.2"
memoffset = { version = "0.6.5", features = ["unstable_const"] }
atomic-bitvec = { path = "../atomic-bitvec" }
