[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

[features]
staticlib = []

[lib]
name = "syscall"
path ="src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "1.3.2"
